# tagscript

./: Cargo.toml  README.md
src/: action.rs  errors.rs  interpreter.rs  lib.rs  verb.rs
src/block/: assign.rs  breakblock.rs  control.rs  fiftyfifty.rs  loosevariablegetter.rs  math.rs  mod.rs  prelude.rs  random.rs  range.rs  shortcutredirect.rs  stopblock.rs  strf.rs  strictvariablegetter.rs  substr.rs
src/interface/: adapter.rs  block.rs  mod.rs
tests/: test_adapters.rs  test_basic.rs
