[package]
name = "tagscript"
version = "0.1.0"
edition = "2021"
description = "TagScript is a drop in easy to use string interpreter that lets you provide users with ways of customizing their profiles or chat rooms with interactive text."
repository = "https://github.com/Friskytool/TagScript-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
rand = "0.8.5"
meval = "0.2.0"